--- a/doomgeneric/CMakeLists.txt
+++ b/doomgeneric/CMakeLists.txt
@@ -3,3 +3,4 @@ set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "")
 
 ADD_EXECUTABLE(doom ${SOURCES})
 INSTALL(TARGETS doom RUNTIME DESTINATION games/doom)
+TARGET_LINK_LIBRARIES(doom libpond)
